# mis-benchmark-framework

./: environment.yml  main.py  readme.md  utils.py
data_generation/: generator.py  random_graph.py  realworld.py  sat.py
solvers/: abstractsolver.py  gurobi.py  kamis.py
solvers/dgl_treesearch/: environment.yml  main.py  model.py  solve.py  train.py  treesearch.py  utils.py
solvers/dgl_treesearch/reducelib/: CMakeLists.txt  reducelib.cpp  reducelib.h  reducelib.py  reducelib_weighted.cpp  reducelib_weighted.h
solvers/dgl_treesearch/reducelib/wmispatch/: branch_and_reduce_algorithm.h  ils.h
solvers/gurobi/: environment.yml  main.py
solvers/intel_treesearch/: .gitignore  environment.yml  intel.patch
solvers/lwd/: .gitignore  environment.yml  lwd.patch
